--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,43 +1,49 @@
 #OFF,systemOut,logFile,logDailyFile,logRollingFile,logMail,logDB,ALL
-log4j.rootLogger=ALL,systemOut,logFile,logDailyFile,logRollingFile
-
+log4j.rootLogger=DEBUG,systemOut,logFile,logDailyFile,logRollingFile
+log4j.category.org.springframework=ERROR
 #输出到控制台
 log4j.appender.systemOut=org.apache.log4j.ConsoleAppender
 log4j.appender.systemOut.layout=org.apache.log4j.PatternLayout
-log4j.appender.systemOut.layout.ConversionPattern=[%-5p][%-22d{yyyy/MM/ddHH:mm:ssS}][%l]%n%m%n
-log4j.appender.systemOut.Threshold=WARN
+log4j.appender.systemOut.layout.ConversionPattern=[%-5p][%-19d{yyyy/MM/dd HH:mm:ss}][%l] %m%n
+log4j.appender.systemOut.Threshold=INFO
 log4j.appender.systemOut.ImmediateFlush=TRUE
 log4j.appender.systemOut.Target=System.out
 
 #输出到文件
 log4j.appender.logFile=org.apache.log4j.FileAppender
 log4j.appender.logFile.layout=org.apache.log4j.PatternLayout
-log4j.appender.logFile.layout.ConversionPattern=[%-5p][%-22d{yyyy/MM/ddHH:mm:ssS}][%l]%n%m%n
+log4j.appender.logFile.layout.ConversionPattern=[%-5p][%-19d{yyyy/MM/dd HH:mm:ss}][%l] %m%n
 log4j.appender.logFile.Threshold=DEBUG
 log4j.appender.logFile.ImmediateFlush=TRUE
 log4j.appender.logFile.Append=TRUE
-log4j.appender.logFile.File=D:\\data\\log4j_Struts.log
+log4j.appender.logFile.File=D:\\data\\log4j\\log4j_FileAppender.log
 log4j.appender.logFile.Encoding=UTF-8
+log4j.appender.logFile.filter.infoFilter = org.apache.log4j.varia.LevelRangeFilter
+log4j.appender.logFile.filter.infoFilter.LevelMin=INFO
+log4j.appender.logFile.filter.infoFilter.LevelMax=INFO
 
 #按DatePattern输出到文件
 log4j.appender.logDailyFile=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.logDailyFile.layout=org.apache.log4j.PatternLayout
-log4j.appender.logDailyFile.layout.ConversionPattern=[%-5p][%-22d{yyyy/MM/ddHH:mm:ssS}][%l]%n%m%n
+log4j.appender.logDailyFile.layout.ConversionPattern=[%-5p][%-19d{yyyy/MM/dd HH:mm:ss}][%l] %m%n
 log4j.appender.logDailyFile.Threshold=DEBUG
 log4j.appender.logDailyFile.ImmediateFlush=TRUE
 log4j.appender.logDailyFile.Append=TRUE
-log4j.appender.logDailyFile.File=D:\\data\\log4j_Struts
+log4j.appender.logDailyFile.File=D:\\data\\log4j\\log4j_Struts
 log4j.appender.logDailyFile.DatePattern='.'yyyy-MM-dd-HH-mm'.log'
 log4j.appender.logDailyFile.Encoding=UTF-8
+log4j.appender.logDailyFile.filter.infoFilter = org.apache.log4j.varia.LevelRangeFilter
+log4j.appender.logDailyFile.filter.infoFilter.LevelMin=INFO
+log4j.appender.logDailyFile.filter.infoFilter.LevelMax=INFO
 
 #设定文件大小输出到文件
 log4j.appender.logRollingFile=org.apache.log4j.RollingFileAppender
 log4j.appender.logRollingFile.layout=org.apache.log4j.PatternLayout
-log4j.appender.logRollingFile.layout.ConversionPattern=[%-5p][%-22d{yyyy/MM/ddHH:mm:ssS}][%l]%n%m%n
+log4j.appender.logRollingFile.layout.ConversionPattern=[%-5p][%-19d{yyyy/MM/dd HH:mm:ss}][%l]%m%n
 log4j.appender.logRollingFile.Threshold=DEBUG
 log4j.appender.logRollingFile.ImmediateFlush=TRUE
 log4j.appender.logRollingFile.Append=TRUE
-log4j.appender.logRollingFile.File=D:\\data\\log4j_Struts.log
+log4j.appender.logRollingFile.File=D:\\data\\log4j\\log4j.RollingFileAppender.log
 log4j.appender.logRollingFile.MaxFileSize=1MB
 log4j.appender.logRollingFile.MaxBackupIndex=10
 log4j.appender.logRollingFile.Encoding=UTF-8
