--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,15 @@
     <artifactId>MyScala</artifactId>
     <version>1.0-SNAPSHOT</version>
     <properties>
-        <spark.version>1.6.3</spark.version>
-        <scala.version>2.10.7</scala.version>
-        <scala.spark>2.10</scala.spark>
+        <spark.version>2.1.0</spark.version>
+        <scala.version>2.11.8</scala.version>
+        <scala.spark>2.11</scala.spark>
+        <!--<spark.version>1.6.3</spark.version>-->
+        <!--<scala.version>2.10.7</scala.version>-->
+        <!--<scala.spark>2.10</scala.spark>-->
+
         <scala-tools.version>2.15.2</scala-tools.version>
+        <java.version>1.8</java.version>
     </properties>
 
 
@@ -79,6 +84,13 @@
             <artifactId>guava</artifactId>
             <version>14.0.1</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-hivecontext-compatibility -->
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-hivecontext-compatibility_2.11</artifactId>
+            <version>2.0.0-preview</version>
+        </dependency>
+
     </dependencies>
     <build>
     <sourceDirectory>${basedir}/src/main/scala</sourceDirectory>
@@ -105,8 +117,8 @@
         <plugin>
             <artifactId>maven-compiler-plugin</artifactId>
             <configuration>
-                <source>1.8</source>
-                <target>1.8</target>
+                <source>${java.version}</source>
+                <target>${java.version}</target>
                 <encoding>UTF-8</encoding>
             </configuration>
         </plugin>
