--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 #OFF,systemOut,logFile,logDailyFile,logRollingFile,logMail,logDB,ALL
-log4j.rootLogger=DEBUG,systemOut,logFile,logDailyFile,logRollingFile
+log4j.rootLogger=WARN,systemOut,logFile,logDailyFile,logRollingFile
 log4j.category.org.springframework=ERROR
 #输出到控制台
 log4j.appender.systemOut=org.apache.log4j.ConsoleAppender
